Use the new MaterialSwitch component

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,10 @@ android {
     }
 }
 
+configurations.all {
+    exclude group: 'androidx.lifecycle', module: 'lifecycle-viewmodel-ktx'
+}
+
 kapt {
     arguments {
         arg ('eventBusIndex', 'com.itsaky.androidide.events.AppEventsIndex')
