--- a/build-tools/tooling-api-events/build.gradle
+++ b/build-tools/tooling-api-events/build.gradle
@@ -25,6 +25,18 @@ java {
     targetCompatibility = rootProject.ext.javaTargetVersion
 }
 
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+
 dependencies {
     implementation common.jkotlin
 }
