--- a/build-tools/builder-model-impl/build.gradle
+++ b/build-tools/builder-model-impl/build.gradle
@@ -25,6 +25,18 @@ java {
     targetCompatibility = rootProject.ext.javaTargetVersion
 }
 
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "11"
+    }
+}
+
 dependencies {
     implementation common.jkotlin
     api "com.android.tools.build:builder-model:${project.property ("androidide.tooling.supportedAgpVersion")}"
