--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -1,6 +1,6 @@
 ext {
-    agp_version = '7.3.0-rc01'
-    kotlin_version = '1.7.10'
+    agp_version = '7.3.0'
+    kotlin_version = '1.7.20'
     google_java_format_version = '1.15.0'
     oss_licenses_version = '0.10.5'
     
@@ -18,22 +18,22 @@ ext {
     common = [
             editor     : 'io.github.Rosemoe.sora-editor:editor:0.17.1',
             utilcode   : 'com.blankj:utilcodex:1.31.0',
-            glide      : 'com.github.bumptech.glide:glide:4.13.2',
-            glide_ap   : 'com.github.bumptech.glide:compiler:4.13.2',
+            glide      : 'com.github.bumptech.glide:glide:4.14.1',
+            glide_ap   : 'com.github.bumptech.glide:compiler:4.14.1',
             quickaction: 'com.github.piruin:quickaction:2.4.3',
             jsoup      : 'org.jsoup:jsoup:1.15.3',
             antlr4     : 'org.antlr:antlr4-runtime:4.9.3',
             javaparser : 'com.github.javaparser:javaparser-symbol-solver-core:3.24.4',
             lang3      : 'org.apache.commons:commons-lang3:3.12.0',
             io         : 'commons-io:commons-io:2.11.0',
-            kotlin     : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.10',
+            kotlin     : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.20',
             jkotlin    : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8',
             eventbus_ap: 'org.greenrobot:eventbus-annotation-processor:3.3.1'
     ]
     
     androidx = [
-            annotation       : 'androidx.annotation:annotation:1.4.0',
-            appcompat        : 'androidx.appcompat:appcompat:1.4.2',
+            annotation       : 'androidx.annotation:annotation:1.5.0',
+            appcompat        : 'androidx.appcompat:appcompat:1.5.1',
             cardview         : 'androidx.cardview:cardview:1.0.0',
             constraintlayout : 'androidx.constraintlayout:constraintlayout:2.1.4',
             coordinatorlayout: 'androidx.coordinatorlayout:coordinatorlayout:1.2.0',
@@ -44,8 +44,8 @@ ext {
             vectors          : 'androidx.vectordrawable:vectordrawable:1.1.0',
             animated_vectors : 'androidx.vectordrawable:vectordrawable-animated:1.1.0',
             multidex         : 'androidx.multidex:multidex:2.0.1',
-            ktx              : 'androidx.core:core-ktx:1.8.0',
-            lib_desugaring   : 'com.android.tools:desugar_jdk_libs:1.1.6',
+            ktx              : 'androidx.core:core-ktx:1.9.0',
+            lib_desugaring   : 'com.android.tools:desugar_jdk_libs:1.2.2',
             splashscreen     : 'androidx.core:core-splashscreen:1.0.0'
     ]
     
@@ -79,7 +79,7 @@ ext {
     tests = [
             junit             : 'junit:junit:4.13.2',
             google_truth      : 'com.google.truth:truth:1.1.3',
-            robolectric       : 'org.robolectric:robolectric:4.8.2',
+            robolectric       : 'org.robolectric:robolectric:4.9',
             androidx_test_core: 'androidx.test:core:1.4.0',
             androidx_junit    : 'androidx.test.ext:junit:1.1.3',
             androidx_espresso : 'androidx.test.espresso:espresso-core:3.4.0',
