--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
     android:preserveLegacyExternalStorage="true"
     android:requestLegacyExternalStorage="true"
     android:supportsRtl="true"
-    android:theme="@style/AppTheme"
+    android:theme="@style/Theme.AndroidIDE"
     tools:ignore="UnusedAttribute,MediaCapabilities">
     <activity
       android:name=".CrashHandlerActivity"
@@ -98,9 +98,9 @@
 
     <activity
       android:name="com.google.android.gms.oss.licenses.OssLicensesMenuActivity"
-      android:theme="@style/AppTheme" />
+      android:theme="@style/Theme.AndroidIDE" />
     <activity
       android:name="com.google.android.gms.oss.licenses.OssLicensesActivity"
-      android:theme="@style/AppTheme" />
+      android:theme="@style/Theme.AndroidIDE" />
   </application>
 </manifest>
