Test tooling API implementation against multiple AGP versions

--- a/build-tools/builder-model-impl/build.gradle
+++ b/build-tools/builder-model-impl/build.gradle
@@ -39,5 +39,5 @@ compileTestKotlin {
 
 dependencies {
     implementation common.jkotlin
-    api "com.android.tools.build:builder-model:${project.property ("androidide.tooling.supportedAgpVersion")}"
+    api "com.android.tools.build:builder-model:7.3.0"
 }
