--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,8 +8,8 @@ on:
   workflow_dispatch: {}
 
 jobs:
-  setup_source:
-    name: Setup source
+  build_apk:
+    name: Build APK
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -29,12 +29,6 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-gradle-
-
-  build_apk:
-    name: Building the APK
-    needs: setup_source
-    runs-on: ubuntu-latest
-    steps:
       - name: Assemble Debug
         run: ./gradlew assembleDebug
       - name: Upload APK
@@ -45,9 +39,25 @@ jobs:
 
   unit_test_debug:
     name: Run local tests
-    needs: build_apk
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Change Gradle wrapper permissions
+        run: chmod +x ./gradlew
+      - name: Restore cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: Run debug tests
         run: ./gradlew testDebug --continue
       - name: Upload Test Reports
