--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,3 +66,35 @@ jobs:
         with:
           name: test-reports
           path: '**/build/reports/tests/'
+
+  test_tooling_api:
+    name: Test Tooling API implementation
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
+        with:
+          java-version: 11
+      - name: Change Gradle wrapper permissions
+        run: chmod +x ./gradlew
+      - name: Restore cache
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Run Tooling API tests
+        run: ./gradlew :build-tools:tooling-api-impl:test --continue
+        env:
+          TEST_TOOLING_API_IMPL: "true"
+      - name: Upload Test Reports
+        if: ${{ always() }}
+        uses: actions/upload-artifact@v2
+        with:
+          name: tooling-api-test-reports
+          path: 'build-tools/tooling-api-impl/build/reports/tests/'
