--- a/tests/test-project/build.gradle
+++ b/tests/test-project/build.gradle
@@ -1,7 +1,7 @@
+/* DO NOT EDIT - Automatically generated file */
 buildscript {
     ext {
         build_gradle_version = "7.2.0"
-        println ("Build Gradle version: '${build_gradle_version}'")
     }
     
     project.ext {
