--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
     android:largeHeap="true"
     android:preserveLegacyExternalStorage="true"
     android:requestLegacyExternalStorage="true"
+    android:resizeableActivity="false"
     android:supportsRtl="true"
     android:theme="@style/Theme.AndroidIDE"
     tools:ignore="UnusedAttribute,MediaCapabilities">
