--- a/settings.gradle
+++ b/settings.gradle
@@ -44,3 +44,4 @@ include ':build-tools:xml-dom'
 include ':build-tools:xml-formatter'
 include ':build-tools:xml-utils'
 include ':editor'
+include ':preferences'
