--- a/actions/build.gradle
+++ b/actions/build.gradle
@@ -32,10 +32,11 @@ android {
 dependencies {
     implementation project (':common')
     implementation common.editor
+    implementation common.kotlin
     implementation common.utilcode
     
     implementation androidx.ktx
-    implementation common.kotlin
+    implementation google.material
 }
 
 repositories {
