--- a/tests/test-project/app/build.gradle
+++ b/tests/test-project/app/build.gradle
@@ -39,12 +39,31 @@ task thisIsATestTask () {
 
 dependencies {
     implementation fileTree (dir: "libs", include: ["*.jar"])
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'androidx.appcompat:appcompat:1.5.1'
+    
+    // Issue #488
+    implementation 'com.unity3d.ads:unity-ads:4.4.0'
+    implementation 'com.google.android.gms:play-services-ads:21.2.0'
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
+    implementation 'com.google.firebase:firebase-perf'
+    implementation 'com.google.firebase:firebase-analytics'
+    implementation 'com.google.firebase:firebase-crashlytics'
+    implementation 'com.google.firebase:firebase-auth'
+    implementation 'com.google.firebase:firebase-firestore'
+    implementation 'com.google.android.gms:play-services-auth:20.3.0'
+    implementation 'com.google.firebase:firebase-messaging'
+    implementation 'com.google.firebase:firebase-database'
+    implementation fileTree(dir: 'libs', include: ['*.aar'])
+    implementation 'com.google.android.gms:play-services-appset:16.0.2'
+    implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
+    implementation 'com.google.android.gms:play-services-basement:18.1.0'
+    implementation 'com.google.firebase:firebase-inappmessaging-display'
+    implementation 'com.google.android.material:material:1.8.0-alpha01'
+    
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'unresolved:unresolved:unresolved'
     implementation project (path: ':another-android-library')
-//    implementation project (path: ':android-library')
+    
+    implementation platform('com.google.firebase:firebase-bom:30.5.0')
 }
 
