Added base files for new XML inflater API

--- a/settings.gradle
+++ b/settings.gradle
@@ -9,7 +9,6 @@ include ':eventbus-events'
 include ':lexers'
 include ':logger'
 include ':lookup'
-include ':sdk-info'
 include ':shared'
 include ':treeview'
 
@@ -45,3 +44,6 @@ include ':build-tools:xml-utils'
 include ':editor'
 include ':preferences'
 include ':resources'
+include ':xml-inflater'
+include ':annotation-processors'
+include ':annotations'
