--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -28,7 +28,8 @@ ext {
             io         : 'commons-io:commons-io:2.11.0',
             kotlin     : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8:1.7.20',
             jkotlin    : 'org.jetbrains.kotlin:kotlin-stdlib-jdk8',
-            eventbus_ap: 'org.greenrobot:eventbus-annotation-processor:3.3.1'
+            eventbus_ap: 'org.greenrobot:eventbus-annotation-processor:3.3.1',
+            javapoet   : 'com.squareup:javapoet:1.13.0'
     ]
     
     androidx = [
@@ -56,6 +57,7 @@ ext {
             guava_jre           : 'com.google.guava:guava:31.1-jre',
             auto_val_annotations: 'com.google.auto.value:auto-value-annotations:1.10',
             auto_val_ap         : 'com.google.auto.value:auto-value:1.10',
+            auto_service        : 'com.google.auto.service:auto-service:1.0.1',
             oss_licenses        : 'com.google.android.gms:play-services-oss-licenses:17.0.0',
             protobuf            : 'com.google.protobuf:protobuf-java:3.10.0'
     ]
