--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,6 +44,36 @@ jobs:
           name: apk-debug
           path: app/build/outputs/apk/debug/**.apk
 
+  generate_translation_report:
+    name: Generate translation report
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+      - name: Change Gradle wrapper permissions
+        run: chmod +x ./gradlew
+      - name: Restore cache
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+      - name: Assemble Debug
+        run: ./gradlew :resources:checkTranslations
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: apk-debug
+          path: build/translation-reports/**
+
   unit_test_debug:
     name: Run local tests
     runs-on: ubuntu-latest
