--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,9 @@
       android:configChanges="orientation|screenSize|uiMode"
       android:windowSoftInputMode="adjustResize" />
     <activity
+      android:name=".UIDesignerActivity"
+      android:windowSoftInputMode="adjustResize" />
+    <activity
       android:name=".PreferencesActivity"
       android:configChanges="orientation|screenSize" />
     <activity
