--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,7 +50,7 @@
       android:configChanges="orientation|screenSize|uiMode"
       android:windowSoftInputMode="adjustResize" />
     <activity
-      android:name=".UIDesignerActivity"
+      android:name=".uidesigner.UIDesignerActivity"
       android:windowSoftInputMode="adjustResize" />
     <activity
       android:name=".PreferencesActivity"
