--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     
     implementation project(path: ':common')
     implementation project(path: ':logger')
+    implementation project(path: ':resources')
     implementation project(path: ':xml-inflater')
     
     testImplementation tests.junit
