Added base files for UI designer workspace

--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -38,6 +38,8 @@ android {
 dependencies {
     
     implementation androidx.appcompat
+    implementation androidx.ktx
+    implementation androidx.fragment_ktx
     implementation google.material
     
     implementation project(path: ':common')
