feat: added basic layout preview

--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     implementation androidx.appcompat
     implementation androidx.ktx
     implementation androidx.fragment_ktx
+    implementation common.utilcode
     implementation google.material
     
     implementation project(path: ':common')
