Update Crowdin configuration file

--- a/crowdin.yml
+++ b/crowdin.yml
@@ -1,6 +1,6 @@
 files:
   - source: /resources/src/main/res/values/strings.xml
-    translation: /resources/src/main/res/values-%android_code%/strings.xml
+    translation: /resources/src/main/res/values-%two_letters_code%/strings.xml
     content_segmentation: 0
     translatable_elements:
       - /resources/**
