chore: update crowdin contributors workflow

--- a/.github/workflows/crowdin_contributors.yml
+++ b/.github/workflows/crowdin_contributors.yml
@@ -21,6 +21,7 @@ jobs:
         max_contributors: 32
         image_size: 64
         min_words_contributed: 100
+        files: CROWDIN_CONTRIBUTORS.md
       env:
         CROWDIN_PROJECT_ID: ${{ secrets.CROWDIN_PROJECT_ID }}
         CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
