--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -78,7 +78,13 @@ ext {
             lsp4j         : 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0',
             jb_annotations: 'org.jetbrains:annotations:23.0.0'
     ]
-    
+
+    git = [
+            rxjava        : 'io.reactivex.rxjava2:rxjava:2.0.1',
+            rxandroid     : 'io.reactivex.rxjava2:rxandroid:2.0.1',
+            jgit          : 'org.eclipse.jgit:org.eclipse.jgit:3.7.1.201504261725-r'
+    ]
+
     tests = [
             junit             : 'junit:junit:4.13.2',
             google_truth      : 'com.google.truth:truth:1.1.3',
