--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,9 +114,10 @@ dependencies {
     implementation google.gson
     implementation google.guava
     
-    implementation 'io.reactivex.rxjava2:rxjava:2.0.1'
-    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation "org.eclipse.jgit:org.eclipse.jgit:3.7.1.201504261725-r"
+    //Git
+    implementation git.rxjava
+    implementation git.rxandroid
+    implementation git.jgit
 
     // AndroidX
     implementation androidx.splashscreen
