feat: add option to clone git repository (#632)
Co-authored-by: Akash Yadav <itsaky01@gmail.com>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -114,6 +114,9 @@ dependencies {
     implementation google.gson
     implementation google.guava
     
+    //Git
+    implementation git.jgit
+
     // AndroidX
     implementation androidx.splashscreen
     implementation androidx.annotation
