chore: update ignore paths in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,13 @@ on:
     paths-ignore:
       - '**.md'
       - 'fastlane/**'
+      - '.github/workflows/crowdin_contributors.yml'
   pull_request:
     branches: [ "main" ]
     paths-ignore:
       - '**.md'
       - 'fastlane/**'
+      - '.github/workflows/crowdin_contributors.yml'
   workflow_dispatch: {}
 
 jobs:
