--- a/uidesigner/src/main/AndroidManifest.xml
+++ b/uidesigner/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~  This file is part of AndroidIDE.
   ~
   ~  AndroidIDE is free software: you can redistribute it and/or modify
@@ -18,4 +17,9 @@
 
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
+  <application>
+    <activity
+      android:name=".UIDesignerActivity"
+      android:windowSoftInputMode="adjustResize" />
+  </application>
 </manifest>
