--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     
     implementation project(path: ':common')
     implementation project(path: ':logger')
+    implementation project(path: ':lookup')
     implementation project(path: ':lsp:api')
     implementation project(path: ':lsp:xml')
     implementation project(path: ':resources')
