--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -44,6 +44,7 @@ dependencies {
     implementation common.utilcode
     implementation google.material
     
+    implementation project(path: ':actions')
     implementation project(path: ':common')
     implementation project(path: ':logger')
     implementation project(path: ':lookup')
