--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -77,11 +77,11 @@ ext {
             lsp4j         : 'org.eclipse.lsp4j:org.eclipse.lsp4j:0.12.0',
             jb_annotations: 'org.jetbrains:annotations:23.0.0'
     ]
-
+    
     git = [
-            jgit          : 'org.eclipse.jgit:org.eclipse.jgit:3.7.1.201504261725-r'
+            jgit: 'org.eclipse.jgit:org.eclipse.jgit:3.7.1.201504261725-r'
     ]
-
+    
     tests = [
             junit             : 'junit:junit:4.13.2',
             google_truth      : 'com.google.truth:truth:1.1.3',
@@ -89,5 +89,6 @@ ext {
             androidx_test_core: 'androidx.test:core:1.5.0',
             androidx_junit    : 'androidx.test.ext:junit:1.1.4',
             androidx_espresso : 'androidx.test.espresso:espresso-core:3.5.0',
+            mockito_kotlin    : 'org.mockito.kotlin:mockito-kotlin:4.1.0'
     ]
 }
