--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     implementation project(path: ':actions')
     implementation project(path: ':common')
     implementation project(path: ':editor')
+    implementation project(path: ':editor-languages')
     implementation project(path: ':logger')
     implementation project(path: ':lookup')
     implementation project(path: ':lsp:api')
