--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ buildscript {
     dependencies {
         classpath classpaths.agp
         classpath classpaths.kotlin_gradle_plugin
+        classpath classpaths.nav_safeargs
         classpath classpaths.oss_licenses
         classpath google.guava_jre
     }
