--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -1,5 +1,9 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
+
+plugins {
+    id 'com.android.library'
+    id 'kotlin-android'
+    id 'kotlin-parcelize'
+}
 
 android {
     namespace "com.itsaky.androidide.uidesigner"
@@ -40,6 +44,9 @@ dependencies {
     implementation androidx.appcompat
     implementation androidx.ktx
     implementation androidx.fragment_ktx
+    implementation androidx.nav_frag
+    implementation androidx.nav_ui
+    implementation androidx.nav_dynamic_features
     implementation common.editor
     implementation common.utilcode
     implementation google.material
