--- a/xml-inflater/build.gradle
+++ b/xml-inflater/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
+apply plugin: 'kotlin-parcelize'
 
 android {
     namespace "com.itsaky.androidide.inflater"
