feat(uidesigner,xml-inflater): automate process of adding widgets in UI Designer with annotations
The IViewAdapter implementations can use @IncludeInDesigner(group) annotation to indicate that the adapter supports views that can be added in the UI Designer. The adapters which are annotated with @IncludeInDesigner must override the 'List<UiWidget> createWidgets()' method and provide a list of UiWidgets that will be displayed in the UI Designer.

--- a/uidesigner/build.gradle
+++ b/uidesigner/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation google.material
     
     implementation project(path: ':actions')
+    implementation project(path: ':annotations')
     implementation project(path: ':common')
     implementation project(path: ':editor')
     implementation project(path: ':logger')
