--- a/editor/build.gradle
+++ b/editor/build.gradle
@@ -57,4 +57,8 @@ dependencies {
     implementation project (path: ":lsp:api")
     implementation project (path: ":lsp:java")
     implementation project (path: ":lsp:xml")
+    
+    testImplementation tests.junit
+    testImplementation tests.google_truth
+    testImplementation tests.robolectric
 }
