refactor: move EditorActivity logic to base classes
BREAKING CHANGE: This moves the logic for various editor activity function to base classes ProjectHandlerActivity and EditorHandlerActivity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,7 +45,7 @@
       </intent-filter>
     </activity>
     <activity
-      android:name=".EditorActivity"
+      android:name=".EditorActivityKt"
       android:launchMode="singleTop"
       android:configChanges="orientation|screenSize|uiMode"
       android:windowSoftInputMode="adjustResize" />
