--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -58,15 +58,16 @@ ext {
     ]
     
     google = [
-            material            : 'com.google.android.material:material:1.7.0',
-            gson                : 'com.google.code.gson:gson:2.10',
-            guava               : 'com.google.guava:guava:31.1-android',
-            guava_jre           : 'com.google.guava:guava:31.1-jre',
-            auto_val_annotations: 'com.google.auto.value:auto-value-annotations:1.10.1',
-            auto_val_ap         : 'com.google.auto.value:auto-value:1.10',
-            auto_service        : 'com.google.auto.service:auto-service:1.0.1',
-            oss_licenses        : 'com.google.android.gms:play-services-oss-licenses:17.0.0',
-            protobuf            : 'com.google.protobuf:protobuf-java:3.10.0'
+            material                : 'com.google.android.material:material:1.7.0',
+            gson                    : 'com.google.code.gson:gson:2.10',
+            guava                   : 'com.google.guava:guava:31.1-android',
+            guava_jre               : 'com.google.guava:guava:31.1-jre',
+            auto_val_annotations    : 'com.google.auto.value:auto-value-annotations:1.10.1',
+            auto_val_ap             : 'com.google.auto.value:auto-value:1.10',
+            auto_service_annotations: 'com.google.auto.service:auto-service-annotations:1.0.1',
+            auto_service            : 'com.google.auto.service:auto-service:1.0.1',
+            oss_licenses            : 'com.google.android.gms:play-services-oss-licenses:17.0.0',
+            protobuf                : 'com.google.protobuf:protobuf-java:3.10.0'
     ]
     
     aapt = [
