fix: disable jetifier

--- a/gradle.properties
+++ b/gradle.properties
@@ -13,5 +13,5 @@
 #Wed Feb 02 13:50:55 IST 2022
 org.gradle.jvmargs=-Xmx2048M --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED -Dkotlin.daemon.jvm.options\="-Xmx2048M"
 android.useAndroidX=true
-android.enableJetifier=true
+android.enableJetifier=false
 android.jetifier.ignorelist=common-30.2.2.jar
