--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -25,6 +25,7 @@ common-glide = { module = "com.github.bumptech.glide:glide", version.ref = "glid
 common-glide_ap = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 common-jsoup = { module = "org.jsoup:jsoup", version = "1.15.3" }
 common-antlr4 = { module = "org.antlr:antlr4", version.ref = "antlr4" }
+common-antlr4-runtime = { module = "org.antlr:antlr4-runtime", version.ref = "antlr4" }
 common-javaparser = { module = "com.github.javaparser:javaparser-symbol-solver-core", version = "3.24.10" }
 common-lang3 = { module = "org.apache.commons:commons-lang3", version = "3.12.0" }
 common-io = { module = "commons-io:commons-io", version = "2.11.0" }
@@ -65,6 +66,7 @@ google-auto-service-annotations = { module = "com.google.auto.service:auto-servi
 google-auto-service = { module = "com.google.auto.service:auto-service", version = "1.0.1" }
 google-oss-licenses = { module = "com.google.android.gms:play-services-oss-licenses", version = "17.0.0" }
 google-protobuf = { module = "com.google.protobuf:protobuf-java", version = "3.10.0" }
+google-java-format = { module ="com.google.googlejavaformat:google-java-format", version="1.15.0" }
 
 # AAPT2
 aapt2-common = { module = "com.android.tools:common", version = "30.2.2" }
