tests: try to fix issues related to tooling-api-all.jar

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -34,6 +34,7 @@ common-jkotlin = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.r
 common-eventbus_ap = { module = "org.greenrobot:eventbus-annotation-processor", version = "3.3.1" }
 common-javapoet = { module = "com.squareup:javapoet", version = "1.13.0" }
 common-ksp = { module = "com.google.devtools.ksp:symbol-processing-api", version.ref = "ksp" }
+common-jsonrpc = { module = "org.eclipse.lsp4j:org.eclipse.lsp4j.jsonrpc", version = "0.19.0" }
 
 # AndroidX
 androidx-annotation = { module = "androidx.annotation:annotation", version = "1.5.0" }
